# vinca

./: .gitignore  .swp  <kLeft>  README.md  TODO  file  import_from_anki.sql  integration_testing.py  pyproject.toml  setup.py  tests.json  todo  todo.md  vinca.1  vinca.1.html  vinca.1.ronn
docs/: philosophy.md  tips.txt  vinca.1  vinca.1.html  vinca.1.ronn
scripts/: vinca  vinca_debug
testing/: integration_testing.py  tests.json
utils/: .goutputstream-7MOVL1  .goutputstream-A51QL1  .goutputstream-K7B0L1  .goutputstream-OZF3L1  .goutputstream-RSKRL1  .goutputstream-SMAWL1  .goutputstream-ZKBQL1  .goutputstream-ZOT1L1  export_from_old_vinca.py  poetry_guide  todo.md
utils/completions/: vinca.fish
vinca/: __init__.py  __main__.py  _browser.py  _card.py  _cardlist.py  _cli_objects.py  _config.py  _database.py  _history.py  _queries.py  _scheduling.py  _tag_caching.py  browser.py  mind  tags
vinca.egg-info/: PKG-INFO  SOURCES.txt
vinca/_editors/: __init__.py
vinca/_editors/two_lines/: __init__.py
vinca/_generators/: __init__.py
vinca/_lib/: .parsing.py.swp  casting.py  json_encoding.py  julianday.py  random_id.py  readkey.py  scrollback.py  terminal.py  unicode_bitmaps.py  video.py  vim_tests.py.html  vinput.py
vinca/_reviewers/: __init__.py
vinca/_schedulers/: __init__.py
vinca/docs/: about.txt  help.txt  tips.txt  tutorial.md  vinca.1  vinca.1.html
vinca/lib/: .vim_tests.py.swp
vinca_CLI/: _CLI_card.py  _CLI_cardlist.py  __main__.py  _browser.py  _cli_objects.py  _config.py  _statistics.py  _sync.py  access_token
vinca_CLI/_lib/: terminal.py
(+8 files in other folders)
