[tool.poetry]
name = "vinca_cli"
version = "0.1.0"
description = "CLI Interface for Vinca"
authors = ["Oscar Laird <olaird25@gmail.com>"]
license = "CC0"

[tool.poetry.dependencies]
vinca_core = {path = "/home/oscar/vinca_core/", develop = true}
python = "^3.8"
rich = "^12.5.1"
fire = "^0.4.0"
requests = "^2.28.1"
requests-toolbelt = "^0.9.1"
prompt-toolkit = "^3.0.30"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
